demo of pcl 2020/8/2 11:13

--- a/pcl_test1/CMakeLists.txt
+++ b/pcl_test1/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.0.0)
 
 project(pcl_proj VERSION 0.1.0)
+add_compile_options(--std=c++14)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 find_package(PCL REQUIRED)
@@ -14,6 +15,8 @@ link_directories(${PCL_LIBRARIE_DIRS})
 
 
 add_executable(fst src/fst.cpp)
+add_executable(snd src/snd.cpp)
 
 
 target_link_libraries(fst ${PCL_LIBRARIES})
+target_link_libraries(snd ${PCL_LIBRARIES})
