octree for pcl-tree

--- a/pcl-tree-myself/CMakeLists.txt
+++ b/pcl-tree-myself/CMakeLists.txt
@@ -5,3 +5,5 @@ add_compile_options(--std=c++14)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 add_executable(kd-tree-1 src/kd-tree-1.cpp)
+
+add_executable(octree-1 src/octree-1.cpp)
