--- a/heima_project/ur_robot_paintor/ros_sp/src/image_service_node/package.xml
+++ b/heima_project/ur_robot_paintor/ros_sp/src/image_service_node/package.xml
@@ -56,6 +56,8 @@
   <build_depend>std_msgs</build_depend>
   <build_depend>tf</build_depend>
   <build_depend>actionlib</build_depend>
+  <build_depend>image_transport</build_depend>
+  <build_depend>cv_bridge</build_depend>
 
   <build_export_depend>my_robot_move_msgs</build_export_depend>
   <build_export_depend>roscpp</build_export_depend>
@@ -64,6 +66,8 @@
   <build_export_depend>std_msgs</build_export_depend>
   <build_export_depend>tf</build_export_depend>
   <build_export_depend>actionlib</build_export_depend>
+  <build_export_depend>image_transport</build_export_depend>
+  <build_export_depend>cv_bridge</build_export_depend>
 
   <exec_depend>my_robot_move_msgs</exec_depend>
   <exec_depend>roscpp</exec_depend>
@@ -72,6 +76,8 @@
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>tf</exec_depend>
   <exec_depend>actionlib</exec_depend>
+  <exec_depend>image_transport</exec_depend>
+  <exec_depend>cv_bridge</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
