--- a/heima_project/ur_robot_paintor/ros_sp/src/robot_info_node/package.xml
+++ b/heima_project/ur_robot_paintor/ros_sp/src/robot_info_node/package.xml
@@ -54,18 +54,24 @@
   <build_depend>std_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>tf</build_depend>
+  <build_depend>my_robot_move_msgs</build_depend>
+  <build_depend>actionlib</build_depend>
 
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
   <build_export_depend>geometry_msgs</build_export_depend>
   <build_export_depend>tf</build_export_depend>
+  <build_export_depend>my_robot_move_msgs</build_export_depend>
+  <build_export_depend>actionlib</build_export_depend>
 
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>tf</exec_depend>
+  <exec_depend>my_robot_move_msgs</exec_depend>
+  <exec_depend>actionlib</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
