--- a/heima_project/ur_robot_paintor/ros_sp/src/image_service_node/CMakeLists.txt
+++ b/heima_project/ur_robot_paintor/ros_sp/src/image_service_node/CMakeLists.txt
@@ -157,11 +157,15 @@ include_directories(
 ## The recommended prefix ensures that target names across packages don't collide
 # add_executable(${PROJECT_NAME}_node src/image_service_node_node.cpp)
 add_executable(svg_to_ways_server_node src/svg_to_ways_server.cpp)
-add_executable(svg_to_ways_client_test_node src/svg_to_ways_client_test.cpp)
-add_executable(move_ways_action_server_node src/move_ways_action_server.cpp)
-add_executable(robot_pose_action_server_node src/robot_pose_action_server.cpp)
-add_executable(robot_pose_action_client_test_node src/robot_pose_action_client_test.cpp)
-add_executable(complete_test_node src/complete_test.cpp src/TestWindow.cpp src/Paintor.cpp src/SimpleRobotMoveTask.cpp)
+add_executable(complete_test_node src/complete_test.cpp
+	src/TestWindow.cpp
+	src/Paintor.cpp
+	src/MyTask.cpp
+	src/SimpleRobotInfoTask.cpp 
+	src/SimpleCameraTask.cpp 
+	src/SimpleSvgToWaysTask.cpp 
+	src/SimpleRobotMoveTask.cpp
+)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -179,27 +183,6 @@ add_executable(complete_test_node src/complete_test.cpp src/TestWindow.cpp src/P
 # )
 
 target_link_libraries(svg_to_ways_server_node
-   ${catkin_LIBRARIES}
-   ${OpenCV_LIBS}
-   ${Boost_LIBRARIES}
-)
-target_link_libraries(svg_to_ways_client_test_node
-   ${catkin_LIBRARIES}
-   ${OpenCV_LIBS}
-   ${Boost_LIBRARIES}
-)
-target_link_libraries(move_ways_action_server_node
-   ${catkin_LIBRARIES}
-   ${OpenCV_LIBS}
-   ${Boost_LIBRARIES}
-)
-target_link_libraries(robot_pose_action_server_node
-   ${catkin_LIBRARIES}
-   ${OpenCV_LIBS}
-   ${Boost_LIBRARIES}
-   ${Qt5Libs}
-)
-target_link_libraries(robot_pose_action_client_test_node
    ${catkin_LIBRARIES}
    ${OpenCV_LIBS}
    ${Boost_LIBRARIES}
