change OpenCV_Libs --> OpenCV_LIBS

--- a/heima_project/ur_robot_paintor/ros_sp/src/camera_info_node/CMakeLists.txt
+++ b/heima_project/ur_robot_paintor/ros_sp/src/camera_info_node/CMakeLists.txt
@@ -159,11 +159,11 @@ add_executable(test_listen_node src/test_listen.cpp)
 # )
 target_link_libraries(test_node
    ${catkin_LIBRARIES}
-   ${OpenCV_Libs}
+   ${OpenCV_LIBS}
 )
 target_link_libraries(test_listen_node
    ${catkin_LIBRARIES}
-   ${OpenCV_Libs}
+   ${OpenCV_LIBS}
 )
 
 #############
